modified to run under Linux

--- a/stormwise_tmdl_jupyter.ipynb
+++ b/stormwise_tmdl_jupyter.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,8 @@
     "from Arts_Python_Tools.tools import format_dict_as_strings\n",
     "\n",
     "# Set amplPath when switching between Linux and Windows:\n",
-    "amplPath = \"ampl.mswin64/ampl\"  # note: you must also set the solver path in stormwise_tmdl.run\n",
+    "#amplPath = \"ampl.mswin64/ampl\"  # note: you must also set the solver path in stormwise_tmdl.run\n",
+    "amplPath = \"ampl.linux64/ampl\"   # note: you must also set the solver path in stormwise_tmdl.run\n",
     "\n",
     "with open('convert_benefits.yaml', 'r') as fin:\n",
     "    convertBenefits = yaml.load(fin)\n",
@@ -76,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -565,10 +566,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1_volume Million Gallons (max value = 693.36):  690\n",
-      "2_sediment Tons (max value = 844.35):  840\n",
+      "1_volume Million Gallons (max value = 693.36):  600\n",
+      "2_sediment Tons (max value = 844.35):  800\n",
       "3_nitrogen Pounds (max value = 9207.16):  9200\n",
-      "4_phosphorous Pounds (max value = 1167.61):  1167\n"
+      "4_phosphorous Pounds (max value = 1167.61):  1100\n"
      ]
     },
     {
@@ -610,11 +611,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1_volume</th>\n",
-       "      <td>690</td>\n",
+       "      <td>600</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2_sediment</th>\n",
-       "      <td>840</td>\n",
+       "      <td>800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3_nitrogen</th>\n",
@@ -622,7 +623,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4_phosphorous</th>\n",
-       "      <td>1167</td>\n",
+       "      <td>1100</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -630,10 +631,10 @@
       ],
       "text/plain": [
        "                  0\n",
-       "1_volume        690\n",
-       "2_sediment      840\n",
+       "1_volume        600\n",
+       "2_sediment      800\n",
        "3_nitrogen     9200\n",
-       "4_phosphorous  1167"
+       "4_phosphorous  1100"
       ]
      },
      "metadata": {},
@@ -690,7 +691,7 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1_volume (Million Gallons)</th>\n",
-       "      <td>692.96</td>\n",
+       "      <td>692.95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2_sediment (Tons)</th>\n",
@@ -698,11 +699,11 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3_nitrogen (Pounds)</th>\n",
-       "      <td>9200.30</td>\n",
+       "      <td>9200.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4_phosphorous (Pounds)</th>\n",
-       "      <td>1167.00</td>\n",
+       "      <td>1166.89</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -710,10 +711,10 @@
       ],
       "text/plain": [
        "                                  0\n",
-       "1_volume (Million Gallons)   692.96\n",
+       "1_volume (Million Gallons)   692.95\n",
        "2_sediment (Tons)            844.32\n",
-       "3_nitrogen (Pounds)         9200.30\n",
-       "4_phosphorous (Pounds)      1167.00"
+       "3_nitrogen (Pounds)         9200.00\n",
+       "4_phosphorous (Pounds)      1166.89"
       ]
      },
      "metadata": {},
@@ -722,7 +723,7 @@
     {
      "data": {
       "text/markdown": [
-       "Total GSI Investment Required to Obtain These Benefits:   **256.92 Million**\n"
+       "Total GSI Investment Required to Obtain These Benefits:   **256.82 Million**\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -782,7 +783,7 @@
        "      <td>134.78</td>\n",
        "      <td>36.26</td>\n",
        "      <td>63.22</td>\n",
-       "      <td>91.13</td>\n",
+       "      <td>91.11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2_sediment (Tons)</th>\n",
@@ -802,7 +803,7 @@
        "      <td>2139.33</td>\n",
        "      <td>638.79</td>\n",
        "      <td>1086.19</td>\n",
-       "      <td>1565.45</td>\n",
+       "      <td>1565.15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4_phosphorous (Pounds)</th>\n",
@@ -812,7 +813,7 @@
        "      <td>255.32</td>\n",
        "      <td>78.35</td>\n",
        "      <td>105.93</td>\n",
-       "      <td>153.19</td>\n",
+       "      <td>153.08</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -832,10 +833,10 @@
        "4_phosphorous (Pounds)            255.32                78.35   \n",
        "\n",
        "                           6_permeable_pavement 7_green_roof  \n",
-       "1_volume (Million Gallons)                63.22        91.13  \n",
+       "1_volume (Million Gallons)                63.22        91.11  \n",
        "2_sediment (Tons)                         56.89         6.30  \n",
-       "3_nitrogen (Pounds)                     1086.19      1565.45  \n",
-       "4_phosphorous (Pounds)                   105.93       153.19  "
+       "3_nitrogen (Pounds)                     1086.19      1565.15  \n",
+       "4_phosphorous (Pounds)                   105.93       153.08  "
       ]
      },
      "metadata": {},
@@ -916,7 +917,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7_green_roof</th>\n",
-       "      <td>$ 134.41 Million</td>\n",
+       "      <td>$ 134.31 Million</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -930,7 +931,7 @@
        "4_rain_barrel          $ 17.50 Million\n",
        "5_impervious_removal   $ 10.72 Million\n",
        "6_permeable_pavement   $ 65.62 Million\n",
-       "7_green_roof          $ 134.41 Million"
+       "7_green_roof          $ 134.31 Million"
       ]
      },
      "metadata": {},
@@ -959,10 +960,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1_volume Million Gallons (max value = 693.36):  500\n",
-      "2_sediment Tons (max value = 844.35):  700\n",
-      "3_nitrogen Pounds (max value = 9207.16):  8000\n",
-      "4_phosphorous Pounds (max value = 1167.61):  900\n"
+      "1_volume Million Gallons (max value = 693.36):  0\n",
+      "2_sediment Tons (max value = 844.35):  0\n",
+      "3_nitrogen Pounds (max value = 9207.16):  0\n",
+      "4_phosphorous Pounds (max value = 1167.61):  0\n"
      ]
     },
     {
@@ -1004,30 +1005,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1_volume</th>\n",
-       "      <td>500</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2_sediment</th>\n",
-       "      <td>700</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3_nitrogen</th>\n",
-       "      <td>8000</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4_phosphorous</th>\n",
-       "      <td>900</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                  0\n",
-       "1_volume        500\n",
-       "2_sediment      700\n",
-       "3_nitrogen     8000\n",
-       "4_phosphorous   900"
+       "               0\n",
+       "1_volume       0\n",
+       "2_sediment     0\n",
+       "3_nitrogen     0\n",
+       "4_phosphorous  0"
       ]
      },
      "metadata": {},
@@ -1084,30 +1085,30 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1_volume (Million Gallons)</th>\n",
-       "      <td>623.03</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2_sediment (Tons)</th>\n",
-       "      <td>839.55</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3_nitrogen (Pounds)</th>\n",
-       "      <td>8000.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4_phosphorous (Pounds)</th>\n",
-       "      <td>1046.51</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  0\n",
-       "1_volume (Million Gallons)   623.03\n",
-       "2_sediment (Tons)            839.55\n",
-       "3_nitrogen (Pounds)         8000.00\n",
-       "4_phosphorous (Pounds)      1046.51"
+       "                               0\n",
+       "1_volume (Million Gallons)  0.00\n",
+       "2_sediment (Tons)           0.00\n",
+       "3_nitrogen (Pounds)         0.00\n",
+       "4_phosphorous (Pounds)      0.00"
       ]
      },
      "metadata": {},
@@ -1116,7 +1117,7 @@
     {
      "data": {
       "text/markdown": [
-       "Total GSI Investment Required to Obtain These Benefits:   **151.24 Million**\n"
+       "Total GSI Investment Required to Obtain These Benefits:   **0.00 Million**\n"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -1170,43 +1171,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1_volume (Million Gallons)</th>\n",
-       "      <td>34.24</td>\n",
-       "      <td>194.20</td>\n",
-       "      <td>139.12</td>\n",
-       "      <td>134.78</td>\n",
-       "      <td>36.26</td>\n",
-       "      <td>63.22</td>\n",
-       "      <td>21.20</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2_sediment (Tons)</th>\n",
-       "      <td>154.79</td>\n",
-       "      <td>204.23</td>\n",
-       "      <td>179.75</td>\n",
-       "      <td>194.41</td>\n",
-       "      <td>47.96</td>\n",
-       "      <td>56.89</td>\n",
-       "      <td>1.52</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3_nitrogen (Pounds)</th>\n",
-       "      <td>438.31</td>\n",
-       "      <td>1851.55</td>\n",
-       "      <td>1480.69</td>\n",
-       "      <td>2139.33</td>\n",
-       "      <td>638.79</td>\n",
-       "      <td>1086.19</td>\n",
-       "      <td>365.15</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4_phosphorous (Pounds)</th>\n",
-       "      <td>108.54</td>\n",
-       "      <td>258.98</td>\n",
-       "      <td>206.69</td>\n",
-       "      <td>255.32</td>\n",
-       "      <td>78.35</td>\n",
-       "      <td>105.93</td>\n",
-       "      <td>32.70</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1214,22 +1215,22 @@
       ],
       "text/plain": [
        "                           1_bioswale 2_rain_garden 3_tree_trench  \\\n",
-       "1_volume (Million Gallons)      34.24        194.20        139.12   \n",
-       "2_sediment (Tons)              154.79        204.23        179.75   \n",
-       "3_nitrogen (Pounds)            438.31       1851.55       1480.69   \n",
-       "4_phosphorous (Pounds)         108.54        258.98        206.69   \n",
+       "1_volume (Million Gallons)       0.00          0.00          0.00   \n",
+       "2_sediment (Tons)                0.00          0.00          0.00   \n",
+       "3_nitrogen (Pounds)              0.00          0.00          0.00   \n",
+       "4_phosphorous (Pounds)           0.00          0.00          0.00   \n",
        "\n",
        "                           4_rain_barrel 5_impervious_removal  \\\n",
-       "1_volume (Million Gallons)        134.78                36.26   \n",
-       "2_sediment (Tons)                 194.41                47.96   \n",
-       "3_nitrogen (Pounds)              2139.33               638.79   \n",
-       "4_phosphorous (Pounds)            255.32                78.35   \n",
+       "1_volume (Million Gallons)          0.00                 0.00   \n",
+       "2_sediment (Tons)                   0.00                 0.00   \n",
+       "3_nitrogen (Pounds)                 0.00                 0.00   \n",
+       "4_phosphorous (Pounds)              0.00                 0.00   \n",
        "\n",
        "                           6_permeable_pavement 7_green_roof  \n",
-       "1_volume (Million Gallons)                63.22        21.20  \n",
-       "2_sediment (Tons)                         56.89         1.52  \n",
-       "3_nitrogen (Pounds)                     1086.19       365.15  \n",
-       "4_phosphorous (Pounds)                   105.93        32.70  "
+       "1_volume (Million Gallons)                 0.00         0.00  \n",
+       "2_sediment (Tons)                          0.00         0.00  \n",
+       "3_nitrogen (Pounds)                        0.00         0.00  \n",
+       "4_phosphorous (Pounds)                     0.00         0.00  "
       ]
      },
      "metadata": {},
@@ -1286,45 +1287,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1_bioswale</th>\n",
-       "      <td>$ 6.77 Million</td>\n",
+       "      <td>$ 0.00 Million</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2_rain_garden</th>\n",
-       "      <td>$ 8.24 Million</td>\n",
+       "      <td>$ 0.00 Million</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3_tree_trench</th>\n",
-       "      <td>$ 13.66 Million</td>\n",
+       "      <td>$ 0.00 Million</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4_rain_barrel</th>\n",
-       "      <td>$ 17.50 Million</td>\n",
+       "      <td>$ 0.00 Million</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5_impervious_removal</th>\n",
-       "      <td>$ 10.72 Million</td>\n",
+       "      <td>$ 0.00 Million</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6_permeable_pavement</th>\n",
-       "      <td>$ 65.62 Million</td>\n",
+       "      <td>$ 0.00 Million</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7_green_roof</th>\n",
-       "      <td>$ 28.74 Million</td>\n",
+       "      <td>$ 0.00 Million</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                    0\n",
-       "1_bioswale             $ 6.77 Million\n",
-       "2_rain_garden          $ 8.24 Million\n",
-       "3_tree_trench         $ 13.66 Million\n",
-       "4_rain_barrel         $ 17.50 Million\n",
-       "5_impervious_removal  $ 10.72 Million\n",
-       "6_permeable_pavement  $ 65.62 Million\n",
-       "7_green_roof          $ 28.74 Million"
+       "                                   0\n",
+       "1_bioswale            $ 0.00 Million\n",
+       "2_rain_garden         $ 0.00 Million\n",
+       "3_tree_trench         $ 0.00 Million\n",
+       "4_rain_barrel         $ 0.00 Million\n",
+       "5_impervious_removal  $ 0.00 Million\n",
+       "6_permeable_pavement  $ 0.00 Million\n",
+       "7_green_roof          $ 0.00 Million"
       ]
      },
      "metadata": {},
@@ -1373,6 +1374,13 @@
     "        print(\"StormWISE Run Completed\")\n",
     "        break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1391,7 +1399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
